--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 
 .customers-say {
   position: relative;
-  width: 100%;
+  width: 100vw !important;
   /* padding: 20px; */
   /* padding-left: 10vw;
   padding-right: 10vw; */
